<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/question1"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioRivers">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correctRivers"
            android:text="@string/correctRivers"
            style="@style/radionstyle"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radionstyle"
            android:id="@+id/wrongRivers"
            android:text="@string/wrongRivers"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radionstyle"
            android:id="@+id/wrongRivers2"
            android:text="@string/wrongRivers2"/>
    </RadioGroup>
</LinearLayout>