<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/questionsStyle"
        android:text="@string/question5"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioRest">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radionstyle"
            android:text="@string/trueRest"
            android:id="@+id/trueRest"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/falseRest"
            style="@style/radionstyle"
            android:id="@+id/falseRest"
            />
    </RadioGroup>
</LinearLayout>